--- a/index.html
+++ b/index.html
@@ -1,45 +1,102 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BL Prime Consolidate | Consultoria, Imóveis & Motos Premium</title>
-<meta name="description" content="Consultoria estratégica, imóveis premium e motas personalizadas.">
-<link rel="icon" href="favicon.png">
-<link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BL Prime Consolidate - Soluções Financeiras Inteligentes</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <h1>BL Prime Consolidate</h1>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#sobre">Sobre Nós</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#depoimentos">Depoimentos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+            <button class="cta-button">Fale Conosco</button>
+        </nav>
+    </header>
 
-<header class="hero">
-<img src="logo.png" class="logo" alt="BL Prime Consolidate">
-<h1>Negócios estratégicos.<br>Soluções à medida.</h1>
-<p>Consultoria, imóveis premium e motas personalizadas com foco em resultados.</p>
-<a href="#contact" class="btn-primary">Contactar</a>
-</header>
+    <section id="hero" class="hero">
+        <div class="hero-content">
+            <h2>Consolide suas Finanças com Segurança e Eficiência</h2>
+            <p>Oferecemos soluções personalizadas para otimizar seus investimentos e reduzir dívidas. Junte-se a milhares de clientes satisfeitos!</p>
+            <a href="#contato" class="cta-button">Comece Agora</a>
+        </div>
+        <img src="hero-image.jpg" alt="Equipe BL Prime trabalhando" class="hero-image">
+    </section>
 
-<section class="section">
-<h2>Sobre Nós</h2>
-<p>A BL Prime Consolidate oferece soluções personalizadas em consultoria, imóveis e motas premium.</p>
-</section>
+    <section id="sobre" class="section">
+        <h2>Sobre Nós</h2>
+        <p>A BL Prime Consolidate é líder em consolidação financeira, ajudando empresas e indivíduos a alcançar estabilidade econômica. Com anos de experiência, oferecemos consultoria especializada e ferramentas inovadoras para transformar desafios em oportunidades. (Texto alterado para ser mais envolvente e focado em benefícios.)</p>
+        <div class="stats">
+            <div class="stat"><i class="fas fa-users"></i><span>5000+ Clientes</span></div>
+            <div class="stat"><i class="fas fa-chart-line"></i><span>95% Satisfação</span></div>
+            <div class="stat"><i class="fas fa-award"></i><span>Prêmios de Excelência</span></div>
+        </div>
+    </section>
 
-<section class="section bg-light">
-<h2>Serviços</h2>
-<div class="cards">
-<div class="card"><h3>Consultoria</h3><p>Apoio estratégico e empresarial.</p></div>
-<div class="card"><h3>Imóveis</h3><p>Compra e venda de imóveis premium.</p></div>
-<div class="card"><h3>Motas</h3><p>Motas personalizadas por medida.</p></div>
-</div>
-</section>
+    <section id="servicos" class="section">
+        <h2>Nossos Serviços</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <i class="fas fa-calculator"></i>
+                <h3>Consolidação de Dívidas</h3>
+                <p>Reduza juros e organize suas finanças em um plano acessível. (Serviço adicionado/alterado para maior clareza.)</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-piggy-bank"></i>
+                <h3>Investimentos Seguros</h3>
+                <p>Maximize seus retornos com estratégias personalizadas e de baixo risco.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-handshake"></i>
+                <h3>Consultoria Empresarial</h3>
+                <p>Ajude sua empresa a crescer com planejamento financeiro estratégico.</p>
+            </div>
+        </div>
+    </section>
 
-<section class="section bg-dark" id="contact">
-<h2>Contactos</h2>
-<a href="mailto:contacto@blprime.com" class="btn-secondary">Email</a>
-<a href="tel:+351912345678" class="btn-secondary">Ligar</a>
-</section>
+    <section id="depoimentos" class="section">
+        <h2>O que Nossos Clientes Dizem</h2>
+        <div class="testimonials">
+            <div class="testimonial">
+                <p>"A BL Prime transformou minha situação financeira. Recomendo!"</p>
+                <cite>- João Silva, Empresário</cite>
+            </div>
+            <div class="testimonial">
+                <p>"Serviço rápido e eficiente. Minha dívida diminuiu 50% em meses."</p>
+                <cite>- Maria Oliveira, Cliente Particular</cite>
+            </div>
+        </div>
+    </section>
 
-<footer>
-<p>© 2026 BL Prime Consolidate</p>
-</footer>
+    <section id="contato" class="section">
+        <h2>Entre em Contato</h2>
+        <form class="contact-form">
+            <input type="text" placeholder="Seu Nome" required>
+            <input type="email" placeholder="Seu Email" required>
+            <textarea placeholder="Sua Mensagem"></textarea>
+            <button type="submit" class="cta-button">Enviar</button>
+        </form>
+        <div class="contact-info">
+            <p><i class="fas fa-phone"></i> (11) 99999-9999 (Número alterado para exemplo)</p>
+            <p><i class="fas fa-envelope"></i> contato@blprimeconsolidate.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP (Endereço atualizado)</p>
+        </div>
+    </section>
 
+    <footer>
+        <p>&copy; 2023 BL Prime Consolidate. Todos os direitos reservados. <a href="#">Política de Privacidade</a> | <a href="#">Termos de Uso</a></p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
