--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="service-card">
                 <i class="fas fa-calculator"></i>
                 <h3>Consolidação de Dívidas</h3>
-                <p>Reduza juros e organize suas finanças em um plano acessível. (Serviço adicionado/alterado para maior clareza.)</p>
+                <p>Reduza juros e organize suas finanças em um plano acessível.</p>
             </div>
             <div class="service-card">
                 <i class="fas fa-piggy-bank"></i>
@@ -57,9 +57,19 @@
                 <p>Maximize seus retornos com estratégias personalizadas e de baixo risco.</p>
             </div>
             <div class="service-card">
-                <i class="fas fa-handshake"></i>
-                <h3>Consultoria Empresarial</h3>
-                <p>Ajude sua empresa a crescer com planejamento financeiro estratégico.</p>
+                <i class="fas fa-motorcycle"></i>
+                <h3>MotoMarket</h3>
+                <p>Compra e venda de motas personalizadas com qualidade e confiança.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-building"></i>
+                <h3>Gestão e exploração de património imobiliário</h3>
+                <p>Brevemente disponível. Gerencie e explore seu patrimônio imobiliário de forma eficiente.</p>
+            </div>
+            <div class="service-card">
+                <i class="fas fa-campground"></i>
+                <h3>Camper vans personalizadas</h3>
+                <p>Brevemente disponível. Personalize sua camper van para aventuras inesquecíveis.</p>
             </div>
         </div>
     </section>
@@ -87,9 +97,9 @@
             <button type="submit" class="cta-button">Enviar</button>
         </form>
         <div class="contact-info">
-            <p><i class="fas fa-phone"></i> (11) 99999-9999 (Número alterado para exemplo)</p>
-            <p><i class="fas fa-envelope"></i> contato@blprimeconsolidate.com</p>
-            <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP (Endereço atualizado)</p>
+            <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
+            <p><i class="fas fa-envelope"></i> blpconsolidate@icloud.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP</p>
         </div>
     </section>
 
