--- a/index.html
+++ b/index.html
@@ -1,112 +1,66 @@
+
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BL Prime Consolidate - Soluções Financeiras Inteligentes</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BL Prime Consolidate | MotoMarket, Imóveis & Camper Vans</title>
+<meta name="description" content="BL Prime Consolidate – MotoMarket, Gestão de Património Imobiliário e Camper vans personalizadas.">
+<link rel="icon" href="favicon.png">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <h1>BL Prime Consolidate</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#sobre">Sobre Nós</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-            <button class="cta-button">Fale Conosco</button>
-        </nav>
-    </header>
 
-    <section id="hero" class="hero">
-        <div class="hero-content">
-            <h2>Consolide suas Finanças com Segurança e Eficiência</h2>
-            <p>Oferecemos soluções personalizadas para otimizar seus investimentos e reduzir dívidas. Junte-se a milhares de clientes satisfeitos!</p>
-            <a href="#contato" class="cta-button">Comece Agora</a>
-        </div>
-        <img src="hero-image.jpg" alt="Equipe BL Prime trabalhando" class="hero-image">
-    </section>
+<header class="hero">
+<img src="logo.png" class="logo" alt="BL Prime Consolidate">
+<h1>Negócios estratégicos.<br>Soluções à medida.</h1>
+<p>Especialistas em MotoMarket, Gestão de Património Imobiliário e Camper vans personalizadas.</p>
+<a href="#contact" class="btn-primary">Contactar</a>
+</header>
 
-    <section id="sobre" class="section">
-        <h2>Sobre Nós</h2>
-        <p>A BL Prime Consolidate é líder em consolidação financeira, ajudando empresas e indivíduos a alcançar estabilidade econômica. Com anos de experiência, oferecemos consultoria especializada e ferramentas inovadoras para transformar desafios em oportunidades. (Texto alterado para ser mais envolvente e focado em benefícios.)</p>
-        <div class="stats">
-            <div class="stat"><i class="fas fa-users"></i><span>5000+ Clientes</span></div>
-            <div class="stat"><i class="fas fa-chart-line"></i><span>95% Satisfação</span></div>
-            <div class="stat"><i class="fas fa-award"></i><span>Prêmios de Excelência</span></div>
-        </div>
-    </section>
+<section class="section">
+<h2>Serviços</h2>
+<div class="service-grid">
 
-    <section id="servicos" class="section">
-        <h2>Nossos Serviços</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <i class="fas fa-calculator"></i>
-                <h3>Consolidação de Dívidas</h3>
-                <p>Reduza juros e organize suas finanças em um plano acessível.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-piggy-bank"></i>
-                <h3>Investimentos Seguros</h3>
-                <p>Maximize seus retornos com estratégias personalizadas e de baixo risco.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-motorcycle"></i>
-                <h3>MotoMarket</h3>
-                <p>Compra e venda de motas personalizadas com qualidade e confiança.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-building"></i>
-                <h3>Gestão e exploração de património imobiliário</h3>
-                <p>Brevemente disponível. Gerencie e explore seu patrimônio imobiliário de forma eficiente.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-campground"></i>
-                <h3>Camper vans personalizadas</h3>
-                <p>Brevemente disponível. Personalize sua camper van para aventuras inesquecíveis.</p>
-            </div>
-        </div>
-    </section>
+<div class="service-card">
+<img src="imovel.jpg" alt="Gestão de Património Imobiliário">
+<h3>Gestão e Exploração de Património Imobiliário <span class="soon">Brevemente disponível</span></h3>
+<p>Gestão e exploração de imóveis de forma profissional e segura.</p>
+</div>
 
-    <section id="depoimentos" class="section">
-        <h2>O que Nossos Clientes Dizem</h2>
-        <div class="testimonials">
-            <div class="testimonial">
-                <p>"A BL Prime transformou minha situação financeira. Recomendo!"</p>
-                <cite>- João Silva, Empresário</cite>
-            </div>
-            <div class="testimonial">
-                <p>"Serviço rápido e eficiente. Minha dívida diminuiu 50% em meses."</p>
-                <cite>- Maria Oliveira, Cliente Particular</cite>
-            </div>
-        </div>
-    </section>
+<div class="service-card">
+<img src="motomarket.jpg" alt="MotoMarket">
+<h3>MotoMarket</h3>
+<p>Aluguer de motos ao dia para treinos/competições: <strong>50€ / dia</strong>.<br>Em breve teremos motos para revenda.</p>
+</div>
 
-    <section id="contato" class="section">
-        <h2>Entre em Contato</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Seu Nome" required>
-            <input type="email" placeholder="Seu Email" required>
-            <textarea placeholder="Sua Mensagem"></textarea>
-            <button type="submit" class="cta-button">Enviar</button>
-        </form>
-        <div class="contact-info">
-            <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
-            <p><i class="fas fa-envelope"></i> blpconsolidate@icloud.com</p>
-            <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP</p>
-        </div>
-    </section>
+<div class="service-card">
+<img src="camper.jpg" alt="Camper Vans">
+<h3>Camper Vans Personalizadas <span class="soon">Brevemente disponível</span></h3>
+<p>Camper vans adaptadas ao estilo de cada cliente.</p>
+</div>
 
-    <footer>
-        <p>&copy; 2023 BL Prime Consolidate. Todos os direitos reservados. <a href="#">Política de Privacidade</a> | <a href="#">Termos de Uso</a></p>
-    </footer>
+</div>
+</section>
 
-    <script src="script.js"></script>
+<section class="section bg-dark" id="contact">
+<h2>Contacte-nos</h2>
+
+<form action="https://formspree.io/f/mleovdgv" method="POST" class="contact-form">
+<input type="text" name="name" placeholder="Nome" required>
+<input type="email" name="email" placeholder="Email" required>
+<textarea name="message" placeholder="Mensagem" required></textarea>
+<button type="submit">Enviar Mensagem</button>
+</form>
+
+<p>Email: <a href="mailto:blpconsolidate@icloud.com">blpconsolidate@icloud.com</a></p>
+</section>
+
+<a href="https://wa.me/351912345678" class="whatsapp-float" target="_blank">WhatsApp</a>
+
+<footer>
+<p>© 2026 BL Prime Consolidate</p>
+</footer>
+
 </body>
 </html>
