--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BL Prime Consolidate - Home</title>
+    <title>BL Prime Consolidate - Contacto</title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,9 +19,14 @@
     </header>
 
     <section>
-        <h2>Bem-vindo à BL Prime Consolidate</h2>
-        <p>Especialistas em MotoMarket, Gestão de Património Imobiliário e Camper vans personalizadas.</p>
-        <a href="servicos.html" class="btn-primary">Ver Serviços</a>
+        <h2>Contacte-nos</h2>
+        <form action="https://formspree.io/f/mleovdgv" method="POST" class="contact-form">
+            <input type="text" name="name" placeholder="Nome" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <textarea name="message" placeholder="Mensagem" required></textarea>
+            <button type="submit">Enviar Mensagem</button>
+        </form>
+        <p>Email: <a href="mailto:blpconsolidate@icloud.com">blpconsolidate@icloud.com</a></p>
     </section>
 
     <footer>
