--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BL Prime Consolidate - Home</title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -18,9 +19,9 @@
         </nav>
     </header>
 
-    <section>
+    <section class="hero">
         <h2>Bem-vindo à BL Prime Consolidate</h2>
-        <p>Especialistas em MotoMarket, Gestão de Património Imobiliário e Camper vans personalizadas.</p>
+        <p>Especialistas em MotoMarket, Gestão de Património Imobiliário e Camper vans personalizadas. Descubra soluções premium para o seu estilo de vida.</p>
         <a href="servicos.html" class="btn-primary">Ver Serviços</a>
     </section>
 
@@ -28,6 +29,6 @@
         <p>© 2024 BL Prime Consolidate</p>
     </footer>
 
-    <a href="https://wa.me/351911043284" class="whatsapp-float" target="_blank">WhatsApp</a>
+    <a href="https://wa.me/351911043284" class="whatsapp-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
 </body>
 </html>
