--- a/servicos.html
+++ b/servicos.html
@@ -8,44 +8,51 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <img src="logo.png" class="logo" alt="BL Prime Consolidate" style="max-width:150px;margin-bottom:10px;">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="servicos.html">Serviços</a>
-            <a href="testemunhos.html">Testemunhos</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
-    </header>
+<header>
+    <img src="logo.png" class="logo" alt="BL Prime Consolidate" style="max-width:150px;margin-bottom:10px;">
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="servicos.html">Serviços</a>
+        <a href="testemunhos.html">Testemunhos</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
+</header>
 
-    <section>
-        <h2>Serviços</h2>
-        <div class="service-grid">
-            <div class="service-card">
-                <img src="imovel.jpg" alt="Gestão Património">
-                <h3>Gestão e Exploração de Património Imobiliário <span class="soon">Brevemente disponível</span></h3>
-                <p>Gestão de imóveis tradicionais e casas de madeira para aluguer de longa duração.</p>
-            </div>
-            <div class="service-card">
-                <img src="motomarket.jpg" alt="MotoMarket">
-                <h3>MotoMarket</h3>
-                <p>Aluguer de motos ao dia para treinos/competições: <strong>50€ / dia</strong>.<br>
-                Em breve teremos motos para revenda.<br>
-                Encontramos a moto ideal para cada um.</p>
-                <a href="contacto.html" class="btn-primary">Reservar</a>
-            </div>
-            <div class="service-card">
-                <img src="camper.jpg" alt="Camper Vans">
-                <h3>Camper Vans Personalizadas <span class="soon">Brevemente disponível</span></h3>
-                <p>Camper vans adaptadas ao estilo de cada cliente.</p>
-            </div>
-        </div>
-    </section>
+<section>
+<h2>Serviços</h2>
+<div class="service-grid">
 
-    <footer>
-        <p>© 2024 BL Prime Consolidate</p>
-    </footer>
+<div class="service-card">
+<img src="imovel.jpg">
+<h3>Gestão e Exploração de Património Imobiliário <span class="soon">Brevemente disponível</span></h3>
+<p>Gestão de imóveis tradicionais e casas de madeira.</p>
+</div>
 
-    <a href="https://wa.me/351911043284" class="whatsapp-float" target="_blank">WhatsApp</a>
+<div class="service-card">
+<img src="motomarket.jpg">
+<h3>MotoMarket</h3>
+<p>Aluguer e consultoria de motos.</p>
+<a href="contacto.html" class="btn-primary">Reservar</a>
+</div>
+
+<div class="service-card">
+<img src="camper.jpg">
+<h3>Camper Vans Personalizadas <span class="soon">Brevemente disponível</span></h3>
+<p>Projetos personalizados.</p>
+</div>
+
+<div class="service-card">
+<img src="logo.png">
+<h3>KawannInkTattoo</h3>
+<p>Tatuagem artística personalizada com identidade própria.</p>
+<a href="https://www.instagram.com/_kawanninktattoo_/" target="_blank" class="btn-primary">Ver Instagram</a>
+</div>
+
+</div>
+</section>
+
+<footer>
+<p>© 2024 BL Prime Consolidate</p>
+</footer>
 </body>
 </html>
