--- a/contacto.html
+++ b/contacto.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacte a BL Prime Consolidate para MotoMarket, gestão imobiliária, camper vans e tatuagem artística.">
     <title>BL Prime Consolidate - Contacto</title>
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .contact-form {animation: fadeIn 1s ease-in;}
+        @keyframes fadeIn {from {opacity: 0;} to {opacity: 1;}}
+        .contact-info {display: flex; justify-content: center; gap: 20px; margin-top: 30px; flex-wrap: wrap;}
+        .contact-info div {text-align: center;}
+        .contact-info i {font-size: 2em; color: #d4af37; margin-bottom: 10px;}
+    </style>
 </head>
 <body>
     <header>
-        <img src="logo.png" class="logo" alt="BL Prime Consolidate" style="max-width:150px;margin-bottom:10px;">
+        <img src="images/logo.png" class="logo" alt="BL Prime Consolidate" style="max-width:150px;margin-bottom:10px;">
         <nav>
             <a href="index.html">Home</a>
             <a href="servicos.html">Serviços</a>
@@ -21,18 +30,12 @@
     <section>
         <h2>Contacte-nos</h2>
         <form action="https://formspree.io/f/mleovdgv" method="POST" class="contact-form">
-            <input type="text" name="name" placeholder="Nome" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <textarea name="message" placeholder="Mensagem" required></textarea>
+            <label for="name"><i class="fas fa-user"></i> Nome</label>
+            <input type="text" id="name" name="name" placeholder="Nome" required>
+            <label for="email"><i class="fas fa-envelope"></i> Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <label for="message"><i class="fas fa-comment"></i> Mensagem</label>
+            <textarea id="message" name="message" placeholder="Mensagem" required></textarea>
             <button type="submit">Enviar Mensagem</button>
         </form>
-        <p>Email: <a href="mailto:blpconsolidate@icloud.com">blpconsolidate@icloud.com</a></p>
-    </section>
-
-    <footer>
-        <p>© 2024 BL Prime Consolidate</p>
-    </footer>
-
-    <a href="https://wa.me/351911043284" class="whatsapp-float" target="_blank">WhatsApp</a>
-</body>
-</html>
+        <p style="text-align:center;margin-top:20px;">Email: <a href="mailto:blpconsolidate@icloud.com"><i class="fas fa-envelope"></i> bl
