--- a/testemunhos.html
+++ b/testemunhos.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Testemunhos de clientes da BL Prime Consolidate sobre MotoMarket, imóveis e camper vans.">
     <title>BL Prime Consolidate - Testemunhos</title>
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .testimonial-card {animation: fadeInUp 0.6s ease-out both;}
+        .testimonial-card:nth-child(1) {animation-delay: 0.1s;}
+        .testimonial-card:nth-child(2) {animation-delay: 0.2s;}
+        .testimonial-card:nth-child(3) {animation-delay: 0.3s;}
+        @keyframes fadeInUp {from {opacity: 0; transform: translateY(30px);} to {opacity: 1; transform: translateY(0);}}
+        .stars {color: #d4af37; font-size: 1.2em; margin-bottom: 10px;}
+    </style>
 </head>
 <body>
     <header>
-        <img src="logo.png" class="logo" alt="BL Prime Consolidate" style="max-width:150px;margin-bottom:10px;">
+        <img src="images/logo.png" class="logo" alt="BL Prime Consolidate" style="max-width:150px;margin-bottom:10px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+        <h1 class="logo" style="display:none;font-size:1.5em;color:#d4af37;margin-bottom:10px;">BL Prime Consolidate</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="servicos.html">Serviços</a>
@@ -22,18 +33,24 @@
         <h2>Testemunhos</h2>
         <div class="service-grid">
             <div class="testimonial-card">
-                <img src="testimonial1.jpg" alt="Cliente 1">
-                <p>"Excelente serviço! Encontraram a moto perfeita para mim."</p>
+                <img src="images/testimonial1.jpg" alt="Cliente 1" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <p style="display:none;text-align:center;color:#d4af37;">Imagem não disponível</p>
+                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <p><i class="fas fa-quote-left" style="color:#d4af37;"></i> Excelente serviço! Encontraram a moto perfeita para mim. <i class="fas fa-quote-right" style="color:#d4af37;"></i></p>
                 <p>- João S.</p>
             </div>
             <div class="testimonial-card">
-                <img src="testimonial2.jpg" alt="Cliente 2">
-                <p>"As casas de madeira para aluguer são simplesmente fantásticas."</p>
+                <img src="images/testimonial2.jpg" alt="Cliente 2" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <p style="display:none;text-align:center;color:#d4af37;">Imagem não disponível</p>
+                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <p><i class="fas fa-quote-left" style="color:#d4af37;"></i> As casas de madeira para aluguer são simplesmente fantásticas. <i class="fas fa-quote-right" style="color:#d4af37;"></i></p>
                 <p>- Maria L.</p>
             </div>
             <div class="testimonial-card">
-                <img src="testimonial3.jpg" alt="Cliente 3">
-                <p>"As camper vans são incrivelmente personalizadas e práticas."</p>
+                <img src="images/testimonial3.jpg" alt="Cliente 3" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <p style="display:none;text-align:center;color:#d4af37;">Imagem não disponível</p>
+                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <p><i class="fas fa-quote-left" style="color:#d4af37;"></i> As camper vans são incrivelmente personalizadas e práticas. <i class="fas fa-quote-right" style="color:#d4af37;"></i></p>
                 <p>- Carlos P.</p>
             </div>
         </div>
@@ -43,6 +60,6 @@
         <p>© 2024 BL Prime Consolidate</p>
     </footer>
 
-    <a href="https://wa.me/351911043284" class="whatsapp-float" target="_blank">WhatsApp</a>
+    <a href="https://wa.me/351911043284" class="whatsapp-float" target="_blank" aria-label="Contactar via WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
 </html>
